# SCAPS

./: README.md  entradaPrincipal.py  main.py  portaEntrada.py  pyproject.toml  read  receiver.py  receiver_log.py  sd.py
Parte I/: entradaPrincipal.py  portaEntrada.py  receiver.py  receiver_log.py
Parte II/: consumer.py
Parte II/door/: consumerDoors.py
Parte II/door/door1/: controllerDoor.py  senderDoor1.py
Parte II/door/door3/: controllerDoor.py
Parte II/elevator/: consumerElevators.py
Parte II/elevator/elevator1/: senderElevator1.py
Parte II/elevator/elevator2/: controllerElevator.py  senderElevator2.py
Parte II/ladder/: consumerLadder.py
Parte II/ladder/ladder1/: senderLadder1.py
Parte II/ladder/ladder2/: senderLadder2.py
Parte III e IV/: aplication.py  sender.sh
Parte III e IV/door/: consumerDoors.py
Parte III e IV/door/door1/: senderDoor1.py
Parte III e IV/door/door2/: controllerDoor.py  senderDoor2.py
Parte III e IV/door/door3/: senderDoor3.py
Parte III e IV/elevator/: consumerElevators.py
Parte III e IV/elevator/elevator1/: controllerElevator.py  senderElevator1.py
Parte III e IV/elevator/elevator3/: controllerElevator.py  senderElevator3.py
Parte III e IV/ladder/: consumerLadder.py
Parte III e IV/service_providers/: consumerWorker.py  controllerWorker.py  senderWorker.py
Porta_Entrada/: cadastroShopping  dadosCamera  infoPainelEntrada
scaps/: consumer.py  controller.py  entradaPrincipal.py  send.py  testes.py
scaps/door/: consumerDoors.py
scaps/elevator/: consumerElevators.py
scaps/ladder/: consumerLadder.py
(+54 files in other folders)
