[tool.poetry]
name = "scaps"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
p2p-python = "^3.0.5"
aiomonitor = "^0.4.5"
pyp2p = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
